Fixed image container wrap.

--- a/css/home.css
+++ b/css/home.css
@@ -99,12 +99,16 @@
 .hero-img-box {
   background-color: red;
   justify-self: center;
-  max-width: 100%;
-  max-height: 20rem;
+  min-width: 100%;
+  height: 20rem;
   overflow: hidden;
 }
 
 .hero-list-item > a .hero-img-box img {
+  object-fit: scale-down;
+  min-width: 100%;
+  max-height: 100%;
+  background-color: blue;
   transition: var(--transition-e);
 }
 
